refs CORECLIENT-136 : Fixed alignement with ClockRenderer.

--- a/styles/renderers/DateTime/ClockRenderer.less
+++ b/styles/renderers/DateTime/ClockRenderer.less
@@ -3,4 +3,5 @@
 .ClockRenderer_wrapper {
   width: 100%;
   height: 100%;
+  text-align: center;
 }
